# lemon-record

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASING.md
.github/workflows/: release.yml
crates/lemon-record/: Cargo.toml  updater.pub
crates/lemon-record/src/: main.rs  updater.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: arm.rs  capture.rs  config.rs  lib.rs  metering.rs  naming.rs  session.rs  visualization.rs
crates/recorder/tests/: session_e2e.rs
icons/: icon.icns
macos/: Info.plist  entitlements.plist
scripts/: gen-icon.py  make-manifest.sh
