[workspace]
resolver = "2"
members = [
    "crates/recorder",
    "crates/lemon-record",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Audio capture + WAV I/O
cpal = "0.15"
hound = "3.5"
crossbeam = "0.8"

# DSP (metering / spectral helpers)
rustfft = "6.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"

# Test helpers
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
