[package]
name = "lemon-record"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LEMON record — a standalone multi-track audio recorder (Lemon Audio)"

[[bin]]
name = "lemon-record"
path = "src/main.rs"

[dependencies]
recorder = { path = "../recorder" }
eframe = "0.29"
egui = "0.29"
