[package]
name = "lemon-record"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LEMON record — a standalone multi-track audio recorder (Lemon Audio)"

[[bin]]
name = "lemon-record"
path = "src/main.rs"

[dependencies]
recorder = { path = "../recorder" }
eframe = "0.29"
egui = "0.29"
# In-app auto-update (verifies minisign signature, swaps the running .app).
cargo-packager-updater = "0.2.3"

# Packaging config for `cargo packager` (.app + .dmg). `version` is omitted on
# purpose so it inherits the crate version (which itself inherits the workspace
# version) — cargo-packager reads it via cargo-metadata.
[package.metadata.packager]
product-name = "LEMON record"
identifier = "dev.lemonaudio.record"
formats = ["app", "dmg"]
icons = ["../../icons/icon.icns"]
category = "public.app-category.music"
authors = ["Lemon Audio"]
publisher = "Lemon Audio"

[package.metadata.packager.macos]
minimum-system-version = "11.0"
# Merged on top of the generated Info.plist — supplies NSMicrophoneUsageDescription.
info-plist-path = "../../macos/Info.plist"
# Applied only when code-signing with a Developer ID (notarization path).
entitlements = "../../macos/entitlements.plist"
# signing-identity is provided via the APPLE_* env vars / config override in CI;
# left unset here so local unsigned (ad-hoc) builds still package.
